# zeronity-01-microblog

./: AGENTS.md  LICENSE  README.md
back/: pyproject.toml
back/src/domain/: entities.py
back/tests/: test_domain_entities.py  test_repositories.py
docs/: agents_query_dump.md  blueprint.md  fig_class.mmd  fig_srv-crt.mmd
front/: package.json  pnpm-lock.yaml
front/e2e/: registration.test.ts
front/src/: registration.spec.ts
