[project]
name = "back"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.3",
    "sqlalchemy>=2.0.38",
]

[dependency-groups]
dev = [
    "ruff",
    "pytest"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]

[project.scripts]
server="src/main.py"
tests="pytest"
